# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

*portage-2.0.49_pre19 (20 Aug 2003): Fixes + security enhancements

  20 Aug 2003; Nicholas Jones <carpaski@gentoo.org> *: Updates to Wayne's
  modifications on dispatch-conf.
  
  20 Aug 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: sfperms
  added to strip permissions if set in features. selinux context support.
  Nakano's cleanups for unmerge output. Added distcc and ccache versions
  into emerge info's output. 'autoaddcvs' FEATURE is documented in make.conf.
  
  20 Aug 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Selinux code
  added. No longer traceback on cp_list for categories. Added in a patch to
  use a pickle for auxcache storing. Should help slow IO boxes.

*portage-2.0.49_pre18 (15 Aug 2003): Fixes.

  15 Aug 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Nakano's
  fix for a glob expansion bug on a tar call.
  
  15 Aug 2003; Nicholas Jones <carpaski@gentoo.org> emerge: Nakano's fixes
  for exiting on a signal and incorrect output for the unmerge screen.
  
  15 Aug 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Added in
  patch to shuffle thirdparty mirrors. Nakano's fixes for digests+fetching
  bugs/messages/errors. Virtual stripping fix.

  15 Aug 2003; Nicholas Jones <carpaski@gentoo.org> *: Fix to emerge -V
  and related output. Typo fixes. Parent thread no longer drops root in
  userpriv. 'autoaddcvs' feature now determines if portage will auto-add
  files to cvs. Virtuals fix for an empty key line. Added user categories
  file as /etc/portage/categories.

*portage-2.0.49_pre17 (30 Jul 2003): Resuming/wget GRP, Sandbox updates

  30 Jul 2003; Nicholas Jones <carpaski@gentoo.org> *: GRP updates to
  use RESUMECOMMAND to determine how to download GRP binaries. Adjustments
  to the portage.spawn() code to try and speed it up by eliminating the